--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -98,7 +98,7 @@ Unknowns:
 	
 	<div id="container" class="home">
 
-		<div id="black_screen"></div>
+		<!-- <div id="black_screen"></div> -->
 		
 		<!-- subcontainer  ———————————————————————————————————————————————————————————— -->
 		
@@ -317,13 +317,26 @@ Unknowns:
 				<div id="popup_providers" class="popup_base">
 					<img class="close" src="/images/utility/close16_white.png">
 					<div class="row">
-						Lorem ipsum ... 
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
+						<p>Lorem ipsum ... </p>
 					</div> 
 				</div>
 
 				<!-- Payors popup ————————————————————————————————————————————————————-->
 				<div id="popup_payors" class="popup_base">
 					<img class="close" src="/images/utility/close16_white.png">
+					<h2>Experience</h2>
 					<p>Our team of professionals is built on a foundation of 25 years of Health Plan Management Experience.  We understand the challenges that your members face when they enter the healthcare system and we’re here to help them navigate the course.  Our goal is to reduce the administrative burden placed on health plans as it relates to member specific healthcare products and services.  Through our in-depth knowledge of products and member education we believe that the end result will be healthier more individually engaged members.</p>
 
 					<h2>Patient Centered Focus</h2>
