--- a/app/views/shared/_menu_home.html.erb
+++ b/app/views/shared/_menu_home.html.erb
@@ -1,5 +1,5 @@
-<div id="menu">
-	<div class="menu_main">
+<div id="menu"> <!-- css defined where? -->
+	<div class="menu_main"> <!-- css defined where? -->
 		<!-- menu item: MODALITIES ————————————————— -->
 		<a class="level1 helvetica first" href="#" id="modalities">Modalities</a>
 		<div class="menu_separator"></div>
