--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,6 +52,7 @@ Unknowns:
 		
 	<script type="text/javascript">
 		jQuery(document).ready(function() {
+				/* stop for debugging
 		    $("#banner-rotator").royalSlider({
 						hideArrowOnLastSlide:true,
 						slideshowEnabled:true,
@@ -60,7 +61,8 @@ Unknowns:
 						controlNavEnabled:true,
 						slideSpacing:20,
 								
-		    }); 
+		    });
+				*/
 		 		// carryovers from Mavics code: to handle homeslide on homepage; drop?
 				checkSize(); // does what? 
 				homeCheckSize(); // does what? 
