after breaking up mavic.js

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -87,7 +87,7 @@
         
 		<div id="container">
         
-			<div id="black_screen"></div>
+			<!-- <div id="black_screen"></div> -->
 			
 			<!-- subcontainer —————————————————————————————————————————————————————— -->
             
