--- a/app/views/leaf_categories/show.html.erb
+++ b/app/views/leaf_categories/show.html.erb
@@ -126,7 +126,7 @@
 		div.product_div {width: 120px; margin-right:10px; margin-bottom:10px; float:left; height:120px;
 			background-color:#E6E6E6; border:1px solid #E6E6E6;}
 		div.productName { padding:5px;margin:0;text-align:center;}
-		div.productName a:hover { color:white;}
+		div.product a:hover { color:white;}
 	</style>
 <% end %>
 
