--- a/public/stylesheets/search.css
+++ b/public/stylesheets/search.css
@@ -1,6 +1,6 @@
 /* CSS file */
 /*
-	The search field is iwhtin the menu on the left side of the page
+	The search field is within the menu on the left side of the page
 	Search results are returned by Google in <div> within <div> 
 */
 
