popup overlay size, removing browser html/css problems

--- a/app/views/home/_homeRightContent.html.erb
+++ b/app/views/home/_homeRightContent.html.erb
@@ -10,7 +10,7 @@
 			}
 		td.imageBlock {
 			width:115px;
-			overflow:none;
+			overflow:hidden;
 			border:solid thin gainsboro;
 			background-color:white;
 		}
