--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 		<!-- <%# stylesheet_link_tag "style3.css" %> -->
     <%= stylesheet_link_tag "menu.css" %>
     <%= stylesheet_link_tag "tabs.css" %>
-    <%= stylesheet_link_tag "webform.css" %> <!-- used by what? Request a Catelog? -->
+    <!-- <%# stylesheet_link_tag "webform.css" %> used by what?  -->
 		<%= stylesheet_link_tag "left_nav_popups.css" %> <!-- added by TA 1/4/2012 -->
 		
 		<!-- standard js files -->
@@ -73,7 +73,7 @@
 		
 		<!-- styles for stuff in header: register/login; view-cart checkout -->
 		<style type="text/css">
-			div#register_login { position:absolute; top:20px; right:30px; z-index:98; color:orange; f}
+			div#register_login { position:absolute; top:20px; right:30px; z-index:98; color:orange;font-size:12px;}
 			div#register_login a { color:orange; font-weight:bold; font-size:12px; } 
 		</style>
 		
