--- a/app/views/shared/_rightContent.html.erb
+++ b/app/views/shared/_rightContent.html.erb
@@ -9,7 +9,7 @@
 			}
 		td.imageBlock {
 			width:115px;
-			overflow:none;
+			overflow:hidden;
 			border:solid thin gainsboro;
 			background-color:white;
 		}
