--- a/public/stylesheets/custom-theme/jquery-ui-1.8.10.custom.css
+++ b/public/stylesheets/custom-theme/jquery-ui-1.8.10.custom.css
@@ -68,7 +68,7 @@
 ----------------------------------*/
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid ; background:  url(images/ui-bg_highlight-hard_0__1x100.png) 50% 50% repeat-x; font-weight: normal; color: #555555; }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #555555; text-decoration: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #ffffff; background: # url(images/ui-bg_glass_0__1x400.png) 50% 50% repeat-x; font-weight: normal; color: #212121; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #ffffff; background: url(images/ui-bg_glass_0__1x400.png) 50% 50% repeat-x; font-weight: normal; color: #212121; }
 .ui-state-hover a, .ui-state-hover a:hover { color: #212121; text-decoration: none; }
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid ; background:  url(images/ui-bg_highlight-hard_0__1x100.png) 50% 50% repeat-x; font-weight: normal; color: orange; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: orange; text-decoration: none; }
