--- a/public/stylesheets/product.css
+++ b/public/stylesheets/product.css
@@ -256,7 +256,7 @@
 		height:23px;
 		margin:0px;
 		padding: 0px;
-		overflow:show;
+		overflow:visible;
 	}
 
 	#zoomBox {
@@ -280,7 +280,6 @@
 
 	#zoomBox img,
 	#zoomBoxImg {
-		align:center;
 		margin: auto;
 	}
 
