--- a/public/stylesheets/royalslider.css
+++ b/public/stylesheets/royalslider.css
@@ -302,13 +302,13 @@
 
 
 .royalSlider .grab-cursor{cursor:move;}
-.royalSlider .grab-cursor{cursor:url("../img/cursors/grab.png") 8 8,-moz-grab;}
-.royalSlider .grab-cursor{*cursor:url(../img/cursors/grab.cur);}
+.royalSlider .grab-cursor{cursor:url("../images/cursors/grab.png") 8 8,-moz-grab;}
+.royalSlider .grab-cursor{*cursor:url(../images/cursors/grab.cur);}
 .royalSlider .grab-cursor{cursor:move\0/;} /* ie8 hack */
 
 .royalSlider .grabbing-cursor{cursor:move;}
-.royalSlider .grabbing-cursor{cursor:url("../img/cursors/grabbing.png") 8 8,-moz-grabbing;}
-.royalSlider .grabbing-cursor{*cursor:url(../img/cursors/grabbing.cur);}
+.royalSlider .grabbing-cursor{cursor:url("../images/cursors/grabbing.png") 8 8,-moz-grabbing;}
+.royalSlider .grabbing-cursor{*cursor:url(../images/cursors/grabbing.cur);}
 
 
 /* Cursor used if mouse dragging is disabled */
